--- a/L5 Stanciu Dragos/index.html
+++ b/L5 Stanciu Dragos/index.html
@@ -2,19 +2,33 @@
 	<head>
 		<title>Student</title>
                 <link rel ="stylesheet" href="style.css">
+                <script src= "script.js" defer> </script>
 	</head>
 
 	<body>
-                <a href="cuprins.html">Cuprins</a>
+               <button>
+                          <a href="cuprins.html">
+Cuprins </a>
+               
+               </button>
+               
+               <br>
 
-		<h1>Nume: Stanciu</h1>
-                <h2>Prenume: Dragos Gabriel</h2>
+               <button id="button"> Alta Viata </button>
+
+               <br>
+
+		<h1 id="nume">Nume: Stanciu</h1>
+                <h2 id="prenume">Prenume: Dragos Gabriel</h2>
                 <h6>E-mail: Stanciu.Io.Dragos@student.utcluj.ro<h6>
-                <img id="ep3-typer" height="300" width="430" src="C:\Users\DragosGabrielStanciu\Desktop\L5 Stanciu Dragos\images\mugen-ep3-civic-type-r-04.jpg">
-                <h3>Asteptari legate de educatie:</h2>
-                <h4>  -  Mai putine ore</h4>
+
+                <p id="anNastere">2000 </p>
+
+                <img id="ep3-typer" height="300" width="430" src="C:\Users\DragosGabrielStanciu\Desktop\Portofoliu-Stanciu-Dragos\L5 Stanciu Dragos\images\mugen-ep3-civic-type-r-04.jpg">
+                <h3 id="educatie">Asteptari legate de educatie:</h2>
+                <h4 id="asteptari">  -  Mai putine ore</h4>
                 <h3> Discipline: <a href="https://etti.utcluj.ro/fise-discipline/articles/ea-ro.html">Link</a> </h2>
-                <table>
+                <table id="cocos">
 <tr>
        <th>Disciplina</th>
        <th>An</th>
@@ -71,10 +85,10 @@
 
 
 
-<h3>Hobby-uri</h3>
-<h4>- Baute</h4>
-<h4>- Masini</h4>
-<h4>- Euroi$</h4>
+<h3 id="wowo">Hobby-uri</h3>
+<h4 id="wowo">- Baute</h4>
+<h4 id="wowo">- Masini</h4>
+<h4 id="wowo">- Euroi$</h4>
 
 
 
